--- a/src/templates/blog-detail.html
+++ b/src/templates/blog-detail.html
@@ -3,3 +3,20 @@
 <p>{{post.description}}</p>
 
 <p>{{post.publishDate}}</p>
+
+<h3>Comments</h3>
+<ul>
+	<li>
+		<input type="text" ng-model="query" placeholder="Filter comments">
+	</li>
+	<li ng-repeat="comment in post.comments | filter: query  track by $index">
+		{{ comment.text }}
+	</li>
+</ul>
+
+<p style="color:red" ng-if="reply.text">Reply: {{reply.text}}</p>
+<form ng-submit="addReply()">
+	<input type="hidden" ng-model="reply.id" value="5">
+	<textarea ng-model="reply.text"></textarea>
+	<input type="submit">
+</form>
