--- a/src/templates/blog-detail.html
+++ b/src/templates/blog-detail.html
@@ -1,22 +1,35 @@
-<h1>{{post.title}}</h1>
+<div class="row">
+  <div class="col-sm-8 col-sm-offset-2">
+    <div class="page-header">
+      <h1>{{post.title}} <small>{{post.publishDate}}</small></h1>
+    </div>
+    <p>{{post.description}}</p>
 
-<p>{{post.description}}</p>
+    <hr>
 
-<p>{{post.publishDate}}</p>
+    <h3>Comments</h3>
+    <div class="row">
+      <div class="col-sm-6">
+        <input class="form-control" type="text" ng-model="query" placeholder="Filter comments">
+      </div>
+    </div>
+    <ul>
+    	<li ng-repeat="comment in post.comments | filter: query  track by $index">
+    		{{ comment.text }} <a href="#" confirm-click="Do you want to delete this?" confirmed-click="deleteComment($index)">Confirm</a> <a href="#" ng-click="deleteComment($index)">Delete</a>
+    	</li>
+    </ul>
 
-<h3>Comments</h3>
-<ul>
-	<li>
-		<input type="text" ng-model="query" placeholder="Filter comments">
-	</li>
-	<li ng-repeat="comment in post.comments | filter: query  track by $index">
-		{{ comment.text }}
-	</li>
-</ul>
+    <hr>
 
-<p style="color:red" ng-if="reply.text">Reply: {{reply.text}}</p>
-<form ng-submit="addReply()">
-	<input type="hidden" ng-model="reply.id" value="5">
-	<textarea ng-model="reply.text"></textarea>
-	<input type="submit">
-</form>
+    <div class="row">
+      <div class="col-sm-6">
+        <p style="color:red" ng-if="reply.text">Reply: {{reply.text}}</p>
+        <form ng-submit="addReply()">
+        	<input type="hidden" ng-model="reply.id" value="5">
+        	<textarea class="form-control" ng-model="reply.text"></textarea>
+        	<input class="btn btn-default" type="submit">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
