--- a/src/templates/blog-list.html
+++ b/src/templates/blog-list.html
@@ -8,3 +8,16 @@
 </ul>
 
 <span ng-if="items.length === 0">Post coming soon!</span>
+
+<div class="row">
+  <div class="col-sm-6 col-md-4" ng-repeat="item in items">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h3>{{ item.title }}</h3>
+        <p>{{ item.description }} {{ item.publishDate }}</p>
+        <p><a ng-href="#" class="btn btn-primary" confirm-click="Are you ready?" confirmed-click="goToItem(item)">View</a></p>
+      </div>
+    </div>
+  </div>
+</div>
