--- a/src/templates/blog-detail.html
+++ b/src/templates/blog-detail.html
@@ -25,7 +25,7 @@
       <div class="col-sm-6">
         <p style="color:red" ng-if="reply.text">Reply: {{reply.text}}</p>
         <form ng-submit="addReply()">
-        	<input type="hidden" ng-model="reply.id" value="5">
+        	<!-- <input type="hidden" ng-model="reply.id" value="5"> -->
         	<textarea class="form-control" ng-model="reply.text"></textarea>
         	<input class="btn btn-default" type="submit">
         </form>
