--- a/src/templates/blog-list.html
+++ b/src/templates/blog-list.html
@@ -1,23 +1,49 @@
-<h1>Blog List</h1>
-<ul ng-if="items.length > 0">
+<h1>Blog List<small><a href="#" ng-click="changeCols(4)">Change</a></small></h1>
+<div class="row">
+  <div class="col-sm-6">
+    <input type="text" ng-model="query" class="form-control" placeholder="Filter">
+  </div>
+</div>
+<!-- <ul ng-if="items.length > 0">
 	<li ng-repeat="item in items">
-		<a ng-href="#" confirm-click="Are you ready?" confirmed-click="goToItem(item)">{{ item.title }} {{ item.publishDate }}</a>
+		<a ng-href="#" confirm-click="Are you ready?" confirmed-click="goToItem(item)">{{ item.title }} {{ item.publishDate }}</a> -->
 		<!-- <a href="#" ng-click="goToItem(item)">{{ item.title }} {{ item.publishDate }}</a> -->
 		<!-- ng-href="blog/{{ item.id }}" confirm-click="Are you ready?" confirmed-click="blog/{{ item.id }}" <confirm-click message="Are you positive?" post="item" eq="10+100"></confirm-click> -->
-	</li>
-</ul>
+	<!-- </li>
+</ul> -->
+
+<li dir-paginate="item in items | filter: query | itemsPerPage: 5 as postItems" pagination-id="sub-content">
+  {{ item.title }}
+</li>
+<span ng-if="postItems.length == 0">No Sub Item Found</span>
+<dir-pagination-controls pagination-id="sub-content"></dir-pagination-controls>
 
 <span ng-if="items.length === 0">Post coming soon!</span>
 
-<div class="row">
-  <div class="col-sm-6 col-md-4" ng-repeat="item in items">
+<div class="row" dir-paginate="items in colItems | filter: query | itemsPerPage: 4 as mainItems" pagination-id="main-content">
+  <div class="{{ cssClass }}" ng-repeat="item in items">
     <div class="thumbnail">
       <img src="..." alt="...">
       <div class="caption">
         <h3>{{ item.title }}</h3>
-        <p>{{ item.description }} {{ item.publishDate }}</p>
+        <p>{{ item.text }} {{ item.publishDate }}</p>
         <p><a ng-href="#" class="btn btn-primary" confirm-click="Are you ready?" confirmed-click="goToItem(item)">View</a></p>
       </div>
     </div>
   </div>
 </div>
+<span ng-if="mainItems.length == 0">No Main Item Found</span>
+<dir-pagination-controls ng-hide="query.length > 0 " pagination-id="main-content"></dir-pagination-controls>
+
+<!-- <div class="row">
+  <div class="col-sm-6 col-md-4" ng-repeat="item in items">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h3>{{ item.title }}</h3>
+        <p>{{ item.text }} {{ item.publishDate }}</p>
+        <p><a ng-href="#" class="btn btn-primary" confirm-click="Are you ready?" confirmed-click="goToItem(item)">View</a></p>
+      </div>
+    </div>
+  </div>
+</div> -->
