--- a/src/templates/blog-list.html
+++ b/src/templates/blog-list.html
@@ -29,11 +29,13 @@
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3" dir-paginate="item in items | orderBy: order | filter: query | itemsPerPage: 5 as postItems" pagination-id="sub-content">
     <div class="thumbnail">
-        <img ng-src="{{item.image}}" alt="...">
+        <a ng-href="/blog/{{item.id}}" ng-if="item.image">
+          <img ng-src="{{item.image}}" class="img-responsive">
+        </a>
         <div class="caption">
-          <h3>{{ item.title }}</h3>
+          <h3><a ng-href="/blog/{{item.id}}">{{ item.title }}</a></h3>
           <p>{{ item.text }} {{ item.publishDate }}</p>
-          <p><a ng-href="#" class="btn btn-primary" confirm-click="Are you ready?" confirmed-click="goToItem(item)">View</a></p>
+          <p><a ng-href="/blog/{{item.id}}" class="btn btn-primary">View</a></p>
         </div>
       </div>
   </div>
